@@ -6027,6 +6027,9 @@
                         <listitem>
                             <para>Fixed problem #604904 (build error on OpenSolaris)</para>
                         </listitem>
+                        <listitem>
+                            <para>Fixed problem with nonexistent user actions</para>
+                        </listitem>
                     </itemizedlist>
                 </para>
             </entry>
